--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -12,16 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="50dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imgclick"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:cropToPadding="true"
+            android:scaleType="centerCrop"
+            app:srcCompat="@mipmap/ic_launcher_round"
+            android:contentDescription="" />
 
         <TextView
             android:id="@+id/textView3"
@@ -44,12 +47,15 @@
 
         <Button
             android:id="@+id/logout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
+            android:background="@color/dark_blue"
             android:onClick="tologout"
-            android:text="Logout" />
+            android:text="Logout"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
     </LinearLayout>
 
 </LinearLayout>
